# yt-dlp-rs

./: Cargo.toml  Linkin_Park.toml  README.md  ado.toml  babymetal.toml  bandmaid.toml  hanabie.toml  lofi.toml  saboton.toml  test.toml  yasobi.toml
src/: api.rs  main.rs
test/: Sabaton - The Last Stand (Music Video) .m4a
