[package]
name = "yt-dlp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.6", features = ["derive"] }
crossbeam = "0.8.4"
derive-new = "0.6.0"
derive_more = "0.99.17"
dirs = "5.0.1"
fs_extra = "1.3.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
pest = "2.7.10"
pipette = "0.1.0"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
toml = "0.8.14"
try_match = "0.4.1"
ureq = "2.9.7"
walkdir = "2.5.0"
